syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "Person/info.proto";
import "Person/contact.proto";
import "Person/additional.proto";

option csharp_namespace = "EMS.Protos";

package person;

service PersonService{
  rpc Get(google.protobuf.StringValue) returns (PersonData);
  rpc GetAll(google.protobuf.Empty) returns (People);
  rpc Create(PersonData) returns (google.protobuf.StringValue);
}

message People {
  repeated  PersonData data = 1;
}

message PersonData {
  string id = 1;
  person_info.GeneralInfo general = 2;
  google.protobuf.StringValue comment = 3;
  person_additional_data.AddressData address = 4;
  repeated person_contact.ContactData contacts = 5;
}