syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "EMS.Protos";

package position;

service PositionService {
  rpc GetAll(google.protobuf.Empty) returns (PositionsReply);
  rpc Create(PositionRequest) returns (google.protobuf.Int32Value);
  rpc Edit(ExistingPositionRequest) returns (google.protobuf.Empty);
  rpc UpdateGrade(GradeRequest) returns (google.protobuf.Int32Value);
}

message PositionsReply {
  repeated Position data = 2; 
}

message Position {
  int32 id = 1;
  string name = 2;
  repeated Grade grades = 3;
}

message Grade {
  int32 id = 1;
  int32 grade = 2;
  repeated GradeHistory history = 3;
}

message GradeHistory {
  int32 id = 1;
  float value = 2;
  google.protobuf.Timestamp createdOn = 3;
}

message ExistingPositionRequest {
  int32 id = 1;
  PositionRequest data = 2;
}

message PositionRequest {
  google.protobuf.StringValue name = 1;
  repeated GradeRequest grades = 2;
}

message GradeRequest {
  int32 grade = 1;
  float value = 2;
}
